Main UI
- Window controls are visible in reader view

Reader
- 

Build
- 

Fixes
- Fixed drag bar when in reader view