@@ -760,15 +760,17 @@
 			libraryHighlight('searchField', false);
 
 			if (searchString.includes('y:')) {
+				console.log("y search")
 				const unFilteredSeries = await callAPI(
 					`/api/v1/series/list?page=0&unpaged=true&sort=metadata.titleSort,asc`,
 					'POST', `{"condition": {"allOf": []}}`
 				);
 				const dataArray = unFilteredSeries.content;
 				const searchYear = timeSplit(searchString.split('y:')[1].split(' ')[0]);
+				console.log(searchYear);
 
-				let start = [];
-				let stop = [];
+				let start = 0;
+				let stop = 0;
 				let filterArray = [];
 
 				for (let i = 0; i < dataArray.length; i++) {
@@ -777,11 +779,10 @@
 						continue;
 					}
 					const dateArray = dataArray[i].metadata.alternateTitles.find(item => item.label === 'Time').title.replace('TBD', '5000').split('-');
+					start=(Number(dateArray[0]));
+					stop=(Number(dateArray[1] ?? dateArray[0]));
 
-					start.push(Number(dateArray[0]));
-					stop.push(Number(dateArray[1] ?? dateArray[0]));
-
-					filterArray.push(!((start[i] > Number(searchYear[1])) || (stop[i] < Number(searchYear[0]))));
+					filterArray.push(!((start > Number(searchYear[1])) || (stop < Number(searchYear[0]))));
 				}
 
 				const filteredSeries = dataArray.filter((item, index) =>
