@@ -1,5 +1,5 @@
 Main UI
-- Window controls are visible in reader view
+- Keep window controls visible in reader view
 
 Reader
 - 
@@ -8,4 +8,5 @@ Build
 - 
 
 Fixes
-- Fixed drag bar when in reader view
+- Fix y: search code
+- Fix drag bar when in reader view
